# analyst-ai

./: Cargo.toml  setup.ps1
src/: main.rs
static/: index.html
